fix: label spacing

--- a/frontend/src/style/components/_commit-labels.scss
+++ b/frontend/src/style/components/_commit-labels.scss
@@ -83,7 +83,6 @@
 
   &__icon {
     width: 1.7rem;
-    height: 1.5rem;
     padding-left: 0.1rem;
     padding-right: 0.1rem;
     display: flex;
@@ -94,7 +93,7 @@
 
   &__head,
   &__main {
-    padding: 0.15rem 0.5rem 0.25rem 0.5rem;
+    padding: 0.2rem 0.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
